infra/msk_cluster.tf
resource "aws_security_group" "msk" {
  name        = "${local.prefix}-msk-sg"
  description = "MSK security group"
  vpc_id      = aws_vpc.this.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_msk_configuration" "this" {
  name              = "${local.prefix}-msk-configuration"
  server_properties = <<EOF
auto.create.topics.enable = true
delete.topic.enable       = true
EOF
}

resource "aws_msk_serverless_cluster" "this" {
  cluster_name = "${local.prefix}-msk"

  vpc_config {
    subnet_ids         = aws_subnet.private[*].id
    security_group_ids = [aws_security_group.msk.id]
  }

  client_authentication {
    sasl {
      iam {
        enabled = true
      }
    }
  }
}
